--- a/protobuf/Makefile
+++ b/protobuf/Makefile
@@ -1,3 +1,3 @@
 
 all:
-	protoc --java_out=../src/ WebRtcData.proto Backups.proto DeviceName.proto
+	protoc --java_out=../src/ Backups.proto DeviceName.proto
