--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,12 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0'
     }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'witness'
 apply from: 'witness-verifications.gradle'
 
@@ -66,8 +68,11 @@ dependencies {
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.1.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.1.0'
     implementation "androidx.camera:camera-core:1.0.0-alpha04"
     implementation "androidx.camera:camera-camera2:1.0.0-alpha04"
 
