--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,12 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.10'
     }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.protobuf'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'witness'
 apply from: 'translations.gradle'
@@ -58,8 +60,24 @@ repositories {
         }
     }
     google()
+    mavenCentral()
     jcenter()
     mavenLocal()
+}
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.10.0'
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option "lite"
+                }
+            }
+        }
+    }
 }
 
 dependencies {
@@ -97,7 +115,7 @@ dependencies {
     implementation 'org.conscrypt:conscrypt-android:2.0.0'
     implementation 'org.signal:aesgcmprovider:0.0.3'
 
-    implementation 'org.whispersystems:signal-service-android:2.14.0'
+    implementation 'org.whispersystems:signal-service-android:2.15.0'
 
     implementation 'org.signal:ringrtc-android:0.1.9'
 
@@ -330,6 +348,7 @@ android {
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
             jniLibs.srcDirs = ['libs']
+            proto.srcDir 'protobuf'
         }
         androidTest {
             java.srcDirs = ['test/androidTest/java']
