--- a/app/translations.gradle
+++ b/app/translations.gradle
@@ -7,7 +7,7 @@ ext {
 }
 
 def allStringsResourceFiles(@ClosureParams(value = SimpleType.class, options = ['java.io.File']) Closure c) {
-    file('res').eachFileRecurse(FileType.FILES) { f ->
+    file('../res').eachFileRecurse(FileType.FILES) { f ->
         if (f.name == 'strings.xml') {
             c(f)
         }
